# blip

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.ini  scripts.sh  vim_commands_reference.txt
.all_files/: main.cpp.txt  system.hpp.txt
include/blip/app/: main.hpp
include/blip/buffer/: buffer.hpp  table.hpp
include/blip/config/: editor.hpp
include/blip/input/: action.hpp  vim_engine.hpp
include/blip/platform/: system.hpp
include/blip/text/: font_manager.hpp  syntax.hpp  typesetter.hpp
include/blip/ui/: glyph_cache.hpp  renderer.hpp
plugins/parsers/: tree_sitter_c.dylib  tree_sitter_json.dylib
src/app/: main.cpp
src/buffer/: buffer.cpp  table.cpp
src/config/: editor.cpp
src/core/: log.cpp
src/input/: vim_engine.cpp
src/platform/: system.cpp
src/platform/darwin/: system.cpp  watcher.cpp
src/platform/linux/: system.cpp  watcher.cpp
src/text/: font_manager.cpp  syntax.cpp  typesetter.cpp
src/ui/: glyph_cache.cpp  renderer.cpp
tests/: font_manager.cpp  tests.cpp
